--- a/CS_002_MoreControls/CS_002_MoreControls.csproj
+++ b/CS_002_MoreControls/CS_002_MoreControls.csproj
@@ -46,14 +46,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmTwo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmTwo.Designer.cs">
+      <DependentUpon>FrmTwo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmMoreControls.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmMoreControls.Designer.cs">
+      <DependentUpon>FrmMoreControls.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FrmRadioButtons.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRadioButtons.Designer.cs">
+      <DependentUpon>FrmRadioButtons.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="FrmMoreControls.resx">
+      <DependentUpon>FrmMoreControls.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTwo.resx">
+      <DependentUpon>FrmTwo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
